--- a/style.css
+++ b/style.css
@@ -59,6 +59,8 @@ body {
     color: white;
     height: 100vh;
     margin: 0;
+    color: white;
+    text-shadow: 2px 2px 4px #d16ba5;
 }
 
 p {
@@ -69,6 +71,7 @@ p {
 a {
     color: white;
     text-shadow: 2px 2px 4px #d16ba5;
+    font-weight: normal;
     margin: 0;
 }
 
